[tool.poetry]
name = "lifecycle-package-creator"
version = "0.1.0"
description = "Create ROS2 lifecycle package boilerplate from a minimal config file"
authors = ["Myron Rodrigues <rodriguesmyron47@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.4"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lifecycle-pkg-create = "src.main:main"